--- a/src/app/address-book/address-book.component.html
+++ b/src/app/address-book/address-book.component.html
@@ -10,7 +10,7 @@
 
     <p class="text-center" *ngIf="!isRequesting && (!addressBookEntries || addressBookEntries.length === 0)">No data to display</p>
 
-    <spinner *ngIf="isRequesting" [isRunning]="isRequesting"></spinner>
+    <wc-spinner *ngIf="isRequesting" [isRunning]="isRequesting"></wc-spinner>
 
     <div class="table-responsive" *ngIf="addressBookEntries && addressBookEntries.length > 0">
         <table class="table table-striped table-hover">
