--- a/src/app/direct-upload/direct-upload.component.html
+++ b/src/app/direct-upload/direct-upload.component.html
@@ -29,7 +29,7 @@
 
   <p class="text-center" *ngIf="!isRequesting && (!uploadedCertificates || uploadedCertificates.length === 0)">No data to display</p>
 
-  <spinner *ngIf="isRequesting" [isRunning]="isRequesting"></spinner>
+  <wc-spinner *ngIf="isRequesting" [isRunning]="isRequesting"></wc-spinner>
 
   <div class="table-responsive" *ngIf="uploadedCertificates && uploadedCertificates.length > 0">
     <table class="table table-striped table-hover">
