--- a/src/app/qc-check/qc-check.component.html
+++ b/src/app/qc-check/qc-check.component.html
@@ -26,7 +26,7 @@
                     <tbody>
                         <tr *ngIf="isRequesting">
                             <td colspan="6">
-                                <spinner [isRunning]="isRequesting"></spinner>
+                                <wc-spinner [isRunning]="isRequesting"></wc-spinner>
                             </td>
                         </tr>
                         <tr *ngFor="let qcCheck of qcChecks | paginate: paginationConfig" class="pointer" (click)="downloadPdf($event, qcCheck)">
@@ -35,7 +35,7 @@
                             <td>{{asDate(qcCheck.date) | date}}</td>
                             <td>{{qcCheck.managerName}}</td>
                             <td>{{qcCheck.technician}}</td>
-                            <td class="text-center" [innerHtml]="qcCheck.threeChecksCompleted | tick"></td>
+                            <td class="text-center" [innerHtml]="qcCheck.threeChecksCompleted | wcTick"></td>
                         </tr>
                     </tbody>
                 </table>
