--- a/src/app/recent-calibrations/recent-calibrations.component.html
+++ b/src/app/recent-calibrations/recent-calibrations.component.html
@@ -14,12 +14,12 @@
             </div>
             <div class="col-xs-12 col-sm-4">
                 <div class="form-group">
-                    <date-picker label="From" (dateChanged)="fromChanged($event)" date="{{from}}"></date-picker>
+                    <wc-date-picker label="From" (dateChanged)="fromChanged($event)" date="{{from}}"></wc-date-picker>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4">
                 <div class="form-group">
-                    <date-picker label="To" (dateChanged)="toChanged($event)" date="{{to}}"></date-picker>
+                    <wc-date-picker label="To" (dateChanged)="toChanged($event)" date="{{to}}"></wc-date-picker>
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
 
     <p class="text-center" *ngIf="!isRequesting && (!recentCalibrations || recentCalibrations.length === 0)">No data to display</p>
 
-    <spinner *ngIf="isRequesting" [isRunning]="isRequesting"></spinner>
+    <wc-spinner *ngIf="isRequesting" [isRunning]="isRequesting"></wc-spinner>
 
     <div class="table-responsive" *ngIf="recentCalibrations && recentCalibrations.length > 0">
         <table class="table table-striped table-hover">
