--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -24,7 +24,7 @@
                 <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" [(ngModel)]="confirmPassword" required>
             </div>
             <div class="form-group has-feedback">
-                <date-picker label="License Expiration Date" (dateChanged)="getLicenseKey($event)" date="{{userRegistration.expiration}}"></date-picker>
+                <wc-date-picker label="License Expiration Date" (dateChanged)="getLicenseKey($event)" date="{{userRegistration.expiration}}"></wc-date-picker>
             </div>
             <div class="form-group" *ngIf="userRegistration.licenseKey">
                 <p><strong>License Key:</strong> {{userRegistration.licenseKey}}</p>
