--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,39 @@
-<nav class="navbar navbar-static-top">
+<nav class="navbar">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-            aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
+    &#9776;
+  </button>
+        <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
             <a [routerLink]="['Home']" class="navbar-brand" rel="home" title="Webcal - Tacho Calibration Software">
                 <img src="/images/logo.png" alt="Skillray Transport Services">
             </a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
-                <li><a [hidden]="!isLoggedIn" [routerLink]="['Dashboard']">Dashboard</a></li>
-                <li class="dropdown" [hidden]="!isLoggedIn">
-                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a [routerLink]="['QCCheck']">QC Check</a></li>
-                        <li><a [routerLink]="['CentreCheck']">Centre Check</a></li>
-                        <li><a [routerLink]="['GenerateEmail']">Generate Email</a></li>
-                        <li><a [routerLink]="['InspectionData']">Inspection Data</a></li>
-                        <li><a [routerLink]="['CalibrationsDue']">Calibrations Due</a></li>
-                        <li><a [routerLink]="['RegisterUser']">Register User</a></li>
-                        <li><a [routerLink]="['ManageAccess']">Manage Access</a></li>
-                        <li><a [routerLink]="['SoftwareLicenses']">Software Licenses</a></li>
-                        <li><a [routerLink]="['AddressBook']">Address Book</a></li>
-                        <li>
-                            <hr/>
-                        </li>
-                        <li><a [hidden]="!isLoggedIn" (click)="logout()">Logout</a></li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link" [hidden]="!jwtHelper.isLoggedIn" [routerLink]="['Dashboard']">Dashboard</a>
                 </li>
-                <li><a [hidden]="!isLoggedIn" [routerLink]="['RecentCalibrations']">Recent Calibrations</a></li>
+                <li class="nav-item">
+                    <div class="btn-group" [hidden]="!jwtHelper.isLoggedIn"> 
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tools</button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" [routerLink]="['QCCheck']">QC Check</a>
+                            <a class="dropdown-item" [routerLink]="['CentreCheck']">Centre Check</a>
+                            <a class="dropdown-item" [routerLink]="['GenerateEmail']">Generate Email</a>
+                            <a class="dropdown-item" [routerLink]="['InspectionData']">Inspection Data</a>
+                            <a class="dropdown-item" [routerLink]="['CalibrationsDue']">Calibrations Due</a>
+                            <a class="dropdown-item" [routerLink]="['RegisterUser']">Register User</a>
+                            <a class="dropdown-item" [routerLink]="['ManageAccess']">Manage Access</a>
+                            <a class="dropdown-item" [routerLink]="['SoftwareLicenses']">Software Licenses</a>
+                            <a class="dropdown-item" [routerLink]="['AddressBook']">Address Book</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" [hidden]="!jwtHelper.isLoggedIn" (click)="logout()">Logout</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [hidden]="!jwtHelper.isLoggedIn" [routerLink]="['RecentCalibrations']">Recent Calibrations</a>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
-<div wcAuthRouterOutlet></div>
+<div class="root-container" wcAuthRouterOutlet></div>
