--- a/src/app/generate-email/generate-email.component.html
+++ b/src/app/generate-email/generate-email.component.html
@@ -47,8 +47,7 @@
 
     <div class="email-template" *ngIf="generateReport">
         <div>
-            <img style="max-width:200px; margin-top: -7px; margin-left: auto; margin-right: auto; display: block;" src="/images/webcal.png"
-            alt="Webcal Calibration Software">
+            <img style="margin-left: auto; margin-right: auto; display: block;" src="/images/webcal.png" alt="Webcal Calibration Software">
         </div>
         <div>
             <h2>Your {{reportType | wcSplitByCapitals}} Report</h2>
