--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
                 <div class="carousel-caption">
                     <div class="row">
                         <div class="col-xs-12 col-md-9">
-                            <img style="max-width:200px; margin-top: -7px;" class="hidden-xs" src="/images/webcal.png" alt="Webcal Calibration Software">
+                            <img class="hidden-xs" src="/images/webcal.png" alt="Webcal Calibration Software">
                             <h1>Webcal - Tacho Calibration Software.</h1>
                             <p>Securely view and manage your your tacho data from your web browser.</p>
                             <p>
