--- a/src/app/inspection-data/inspection-data.component.html
+++ b/src/app/inspection-data/inspection-data.component.html
@@ -54,14 +54,14 @@
 
     <div *ngIf="inspectionData && inspectionData.history && !inspectionData.isDefault">
         <h2>Inspection data history</h2>
-        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <div id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default" *ngFor="let item of inspectionData.history; let i = index">
                 <div class="panel-heading" role="tab" [attr.id]="'heading'+i">
                     <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" [attr.href]="'#collapse'+i" aria-expanded="true" [attr.aria-controls]="'collapse'+i">
-                    {{asDate(item.calibrationDate) | date}}
-                    </a>
-                </h4>
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" [attr.href]="'#collapse'+i" aria-expanded="true" [attr.aria-controls]="'collapse'+i">
+                        {{asDate(item.calibrationDate) | date}}
+                        </a>
+                    </h4>
                 </div>
                 <div [attr.id]="'collapse'+i" class="panel-collapse collapse" role="tabpanel" [attr.aria-labelledby]="'heading'+i">
                     <div class="panel-body">
