Fix dashboard layout

--- a/src/app/dashboard/styles.scss
+++ b/src/app/dashboard/styles.scss
@@ -4,7 +4,7 @@
     margin-left: 0;
     padding-left: 0;
     
-    li {
+    div.dashboard-menu-item {
         text-align: center;
         height: 140px;
         border-radius: 10px;
