--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -73,7 +73,8 @@
             <h1>Our software</h1>
             <span>Webcal is downloadable software that you install and run on your computer.</span>
         </div>
-
+    </div>
+    <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/images/1-HomeScreen.png" alt="Home Screen">
