Upgrade Angular 2 part 2

--- a/src/app/calibrations-due/calibrations-due.component.html
+++ b/src/app/calibrations-due/calibrations-due.component.html
@@ -40,7 +40,7 @@
                         <wc-spinner [isRunning]="isRequesting"></wc-spinner>
                     </td>
                 </tr>
-                <tr *ngFor="let calibrationDue of calibrationsDue | depotname : selectedDepotName | paginate: paginationConfig"
+                <tr *ngFor="let calibrationDue of calibrationsDue | wcDepotName : selectedDepotName | paginate: paginationConfig"
                 class="pointer" (click)="downloadCertificate($event, calibrationDue)">
                     <td><img [attr.src]="'/images/' + calibrationDue.documentIcon + '.png'" [attr.alt]="calibrationDue.documentType" /> </td>
                     <td>{{asDate(calibrationDue.date) | date}}</td>
