--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,4 +36,6 @@
         </div>
     </div>
 </nav>
-<div class="root-container" wcAuthRouterOutlet></div>
+<div class="root-container">
+    <router-outlet></router-outlet>
+</div>
