--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
                             <h1>Webcal - Tacho Calibration Software.</h1>
                             <p>Securely view and manage your your tacho data from your web browser.</p>
                             <p>
-                                <a class="btn btn-lg btn-primary" role="button" [routerLink]="['Login']">Log In Now</a>
+                                <a class="btn btn-lg btn-primary" role="button" [routerLink]="['login']">Log In Now</a>
                                 <a href="https://www.webcalconnect.com/software/webcal-fast.exe" class="btn btn-primary btn-lg">Download</a>
                             </p>
                         </div>
