--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -269,7 +269,7 @@ app-wc > undefined > .container {
     background-color: #f5f5f5;
 }
 
-.btn.btn-primary, pagination-controls .pagination .current, .is-selected .pika-button, .pika-button:hover {
+.btn.btn-primary, pagination-controls pagination-template .current, .is-selected .pika-button, .pika-button:hover {
     color: #fff !important;
     text-shadow: 0 -1px 0 rgba(0,0,0,.25) !important;
     background-color: #da4f49 !important;
@@ -394,7 +394,7 @@ pagination-controls li.current{
   border-left: 5px solid #42A948;
 }
 
-.ng-invalid {
+.ng-invalid:not(form) {
   border-left: 5px solid #a94442;
 }
 
