Added ability to change password

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,7 @@
                         <li>
                             <hr/>
                         </li>
+                        <li><a routerLink="/change-password">Change Password</a></li>
                         <li><a [hidden]="!jwtHelper.isLoggedIn" (click)="logout()">Logout</a></li>
                     </ul>
                 </li>
